Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.2.1, 6.2.3
-
macOS 10.15
-
-
757def145be0a9e995747e66daca06c954b42c29 (qt/qtmultimedia/6.2) f835e2871cac9473add920b3fb69e20524152656 (qt/qtmultimedia/dev) 934c9b6dee (qt/tqtc-qtmultimedia/6.2) a7aae08e4d (qt/tqtc-qtmultimedia/6.3) 934c9b6dee (qt/tqtc-qtmultimedia/6.2)
Description
How to reproduce
Use QML Recorder Example (https://doc-snapshots.qt.io/qt6-6.2/qtmultimedia-multimedia-video-recorder-example.html)
1. Press recording button to start
2. Press stop button
Behavior : It keeps recording. "onRecorderStateChanged" is not called. No output is created.
Recording fails with error message: "An unknown error occurred (-12737)"
This works fine on
OS: Big Sur ( CPU: Apple M1)
OS: Big Sur (CPU: Intel)
Attachments
Issue Links
- is duplicated by
-
QTBUG-96380 Recording fails when audio input device is bluetooth microphone on macOS
-
- Closed
-
-
QTBUG-100301 audiorecorder fails on macos
-
- Closed
-
- relates to
-
QTBUG-96047 QCamera QT6.2.0 beta3 cannot work in MacOS BigSur
-
- Closed
-
-
QTBUG-98419 [macOS] Audio Recorder example crashes on start on macOS 10.15 (Catalina)
-
- Closed
-